# Apollo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
data_preparation/: README.md  collapse_annotation.py  compute_mismatching_gene_length.py  compute_tpm.py  create_tissue_file_index.py  download_manifest.py  export_distplots.py  get_gencode_data.sh  get_gtex_data.sh  get_tcga_data.sh  install_gdc_client.sh  make_gencode_gene2length.py  reduce_dataset.py  settings.json  structure_gtex_data.py  structure_tcga_data.py  tcga_api_handler.py  utils.py
nextjs-app/: .dockerignore  package-links.txt  package-lock.json  package.json
nextjs-app/components/: AppInformation.js  AppInformation.module.scss  Button.js  Button.module.scss  Contributors.js  Contributors.module.scss  DetailedGeneInfoTable.js  DetailedGeneInfoTable.module.scss  DetailedGeneInfoTile.js  DetailedGeneInfoTile.module.scss  DownloadAnalysisSettings.js  DownloadAnalysisSettings.module.scss  DownloadButton.js  DownloadButton.module.scss  DownloadableTable.js  DownloadableTable.module.scss  DragDrop.js  DragDrop.module.scss  DraggableTissue.js  DraggableTissue.module.scss  DropDown.js  DropDown.module.scss  EnsemblTile.js  EnsemblTile.module.scss  ExperimentalEvidenceCodes.js  ExperimentalEvidenceCodes.module.scss  GSEATile.js  GSEATile.module.scss  GeneAnalysisTabs.js  GeneAnalysisTabs.module.scss  GenePercentileData.js  GenePercentileData.module.scss  Layout.js  Layout.module.scss  Loader.js  Loader.module.scss  Modal.js  Modal.module.scss  (+29 more)
(+26 files in other folders)
